# RCMS

./: Cargo.toml  LICENSE  README.md
articles/: first-article.json  index.json
src/: main.rs
static/css/: stylesheet.css
static/img/: site.webmanifest
templates/: article.html.tera  base.html.tera  index.html.tera
