[package]
name = "rcms"
version = "0.1.0"
authors = ["sobert"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
tera = "0.11.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["tera_templates"]